# tuxflow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile  PLAN.md  README.md  tuxflow.example.toml
.github/workflows/: ci.yml  release.yml
data/: com.tuxflow.TuxFlow.desktop  com.tuxflow.TuxFlow.metainfo.xml  style.css
data/sounds/: CREDITS.md
docs/: index.html  style.css
packaging/appimage/: AppImageBuilder.yml
packaging/aur/: PKGBUILD
packaging/flatpak/: com.tuxflow.TuxFlow.yml
scripts/: bump-version.sh  install.sh  release.sh
src/: app.rs  lib.rs  main.rs  workspace.rs
src/config/: keybindings.rs  loader.rs  mod.rs  projects.rs  schema.rs  settings.rs  ssh.rs
src/detect/: detector.rs
src/mcp/: bridge.rs  mod.rs  server.rs  tools.rs
src/process/: auto_restart.rs  manager.rs  mod.rs  pid_file.rs
src/ui/: accent.rs  add_command_dialog.rs  add_ssh_dialog.rs  command_palette.rs  edit_project_dialog.rs  git_changes_dialog.rs  mod.rs  project_detail.rs  select_commands_dialog.rs  status_bar.rs  terminal_search.rs  terminal_theme.rs  terminal_view.rs  window.rs
src/ui/settings/: settings_window.rs
src/ui/sidebar/: dnd.rs  mod.rs  process_row.rs  project_list.rs  project_row.rs  section_header.rs
src/util/: icon_detector.rs  mod.rs  notifications.rs  port_detector.rs  resource_monitor.rs  update_checker.rs
src/watcher/: file_watcher.rs
tests/: config_test.rs  detector_test.rs  log_buffer_test.rs  port_detector_test.rs
