[package]
name = "tuxflow"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Linux-native dev environment manager"
default-run = "tuxflow"

[lib]
name = "tuxflow"
path = "src/lib.rs"

[[bin]]
name = "tuxflow"
path = "src/main.rs"

[[bin]]
name = "tuxflow-mcp"
path = "src/bin/tuxflow-mcp.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
vte4 = { version = "0.10", features = ["v0_76"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
dirs = "6"
nix = { version = "0.29", features = ["signal", "process"] }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
