[package]
name = "tuxflow"
version = "0.1.32"
edition = "2024"
license = "MIT"
description = "A Linux-native dev environment manager"
authors = ["Nikola Markovic"]
repository = "https://github.com/markovic-nikola/tuxflow"
homepage = "https://markovic-nikola.github.io/tuxflow/"
readme = "README.md"
default-run = "tuxflow"

[lib]
name = "tuxflow"
path = "src/lib.rs"

[[bin]]
name = "tuxflow"
path = "src/main.rs"

[[bin]]
name = "tuxflow-mcp"
path = "src/bin/tuxflow-mcp.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
gdk4-x11 = { version = "0.11", features = ["xlib"] }
x11 = { version = "2.21", features = ["xlib"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
vte4 = { version = "0.10", features = ["v0_76"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
dirs = "6"
nix = { version = "0.29", features = ["signal", "process"] }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
anyhow = "1"
ureq = { version = "3", features = ["json"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "Nikola Markovic <markovic-nikola@users.noreply.github.com>"
copyright = "2026, TuxFlow Contributors"
depends = "$auto, libgtk-4-1 (>= 4.14), libadwaita-1-0 (>= 1.5), libvte-2.91-gtk4-0"
section = "devel"
priority = "optional"
assets = [
	[
		"target/release/tuxflow",
		"usr/bin/",
		"755",
	],
	[
		"target/release/tuxflow-mcp",
		"usr/bin/",
		"755",
	],
	[
		"data/com.tuxflow.TuxFlow.desktop",
		"usr/share/applications/",
		"644",
	],
	[
		"data/com.tuxflow.TuxFlow.metainfo.xml",
		"usr/share/metainfo/",
		"644",
	],
	[
		"data/icons/hicolor/scalable/apps/com.tuxflow.TuxFlow.svg",
		"usr/share/icons/hicolor/scalable/apps/",
		"644",
	],
	[
		"data/icons/hicolor/scalable/apps/tuxflow-logo-symbolic.svg",
		"usr/share/icons/hicolor/scalable/apps/",
		"644",
	],
	[
		"data/icons/hicolor/scalable/actions/ai-brain-symbolic.svg",
		"usr/share/icons/hicolor/scalable/actions/",
		"644",
	],
	[
		"README.md",
		"usr/share/doc/tuxflow/",
		"644",
	],
]
extended-description = """\
TuxFlow lets developers manage their entire dev environment from one window — \
start/stop/restart dev servers, run multiple AI coding agents side by side, \
monitor process status and resource usage, and expose an MCP server so AI agents \
can observe and control neighboring processes."""
